--- a/src/style/component/header.scss
+++ b/src/style/component/header.scss
@@ -17,6 +17,9 @@ header {
     letter-spacing: 1px;
   }
   nav {
+    display: flex;
+    align-items: center;
+    gap: 30px;
     ul {
       display: flex;
       align-items: center;
@@ -31,6 +34,19 @@ header {
             color: #30fdff;
           }
         }
+      }
+    }
+    .bookTable {
+      color: #ffffff;
+      font-size: 16px;
+      font-weight: 600;
+      padding: 11px 22px;
+      border-radius: 15px;
+      border: 2px solid #ffffff80;
+      text-transform: uppercase;
+      &:hover {
+        background: #ffffff;
+        color: #000;
       }
     }
   }
@@ -56,12 +72,13 @@ header {
       right: -100%;
       width: 100%;
       background-color: #000;
-      padding: 1rem 0 2rem 0;
-      transition: .3s;
+      transition: 0.3s;
+      flex-direction: column;
+      align-items: end;
+      padding: 2rem 1.5rem 2rem 2rem;
       ul {
         flex-direction: column;
         align-items: end;
-        padding-right: 2%;
         li {
           a {
             font-size: 20px;
@@ -70,12 +87,11 @@ header {
         }
       }
     }
-    nav.open{
+    nav.open {
       right: 0;
     }
     .toggleBtn {
       display: block;
-     
     }
   }
 }
