home section and button component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,2 +1,4 @@
 @import url(../style/component/header.scss);
 @import url(../style/base/base.scss);
+@import url(../style/page/home.scss);
+@import url(../style/component/button.scss);
