--- a/src/style/base/base.scss
+++ b/src/style/base/base.scss
@@ -1,9 +1,11 @@
-* {
+ * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", "Cherish";
 }
 a {
   text-decoration: none;
@@ -11,6 +13,6 @@ a {
 li {
   list-style: none;
 }
-body{
-    background: #0ef;
+body {
+  background: #000;
 }
