--- a/src/style/component/header.scss
+++ b/src/style/component/header.scss
@@ -8,6 +8,7 @@ header {
   left: 0;
   right: 0;
   z-index: 100;
+  background-color: none;
   .logo {
     font-weight: 800;
     font-size: 27px;
@@ -60,7 +61,9 @@ header {
     }
   }
 }
-
+header.scrolled{
+  background-color: #000;
+}
 @media (max-width: 1024px) {
   header {
     align-items: center;
