--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,3 +2,4 @@
 @import url(../style/base/base.scss);
 @import url(../style/page/home.scss);
 @import url(../style/component/button.scss);
+@import url(../style/component/shishaTasts.scss);
