--- a/src/style/component/shishaTasts.scss
+++ b/src/style/component/shishaTasts.scss
@@ -1,9 +1,66 @@
-.card{
-    border: 2px solid #0ef;
-    img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+.card {
+  border: 2px solid #0ef;
+  overflow: hidden;
+  position: relative;
+  &:hover {
+    img {
+      scale: 1.2;
     }
+    &:before {
+      width: 100%;
+    }
+    .text_content {
+      transform: translateX(0);
+    }
+  }
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    background-color: transparent;
+    background-image: linear-gradient(180deg, #09090bb5 0%, #30fdff 100%);
+    mix-blend-mode: color;
+    z-index: 1;
+    transition: 0.4s ease-in-out;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
+  .text_content {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 15px;
+    padding: 0 15px;
+    transform: translateX(-100%);
+    transition: 0.6s ease-in-out;
+    h3 {
+      color: #ffffff;
+      font-family: "Montserrat Alternates", Sans-serif;
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 1.3em;
+      letter-spacing: 1.5px;
+    }
+    p {
+      color: #fff;
+      font-size: 17px;
+      letter-spacing: 1px;
+      line-height: 23px;
+    }
+  }
 }
- 
+@media (max-width: 576px) {
+  .card {
+    border: 4px solid #0ef;
+  }
+}
