--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,3 +3,4 @@
 @import url(../style/page/home.scss);
 @import url(../style/component/button.scss);
 @import url(../style/component/shishaTasts.scss);
+@import url(../style/component/customerCommentCard.scss);
