--- a/src/style/page/home.scss
+++ b/src/style/page/home.scss
@@ -83,6 +83,67 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
+.ClientThink {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  gap: 35px;
+  position: relative;
+  .BgImage {
+    position: absolute;
+    top: 9%;
+    left: 0;
+    max-width: 12rem;
+    max-height: 70%;
+    z-index: -1;
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+    }
+  }
+  .BgRightImage {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    max-width: 11rem;
+    max-height: 70%;
+    z-index: -1;
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+    }
+  }
+  .title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    h4 {
+      color: #30fdff;
+      font-family: "Cherish", sans-serif;
+      font-size: 42px;
+      line-height: 1.2em;
+      font-weight: 500;
+    }
+    span {
+      color: #ffffff;
+      font-family: "Montserrat Alternates", Sans-serif;
+      font-size: 50px;
+      font-weight: 500;
+      line-height: 1.3em;
+    }
+  }
+  .CommentCardItem {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 20px;
+  }
+}
 @media (max-width: 1200px) {
   .homeContainer {
     justify-content: center;
@@ -126,6 +187,12 @@
   .ShishaTasts {
     grid-template-columns: repeat(3, 1fr);
   }
+  .ClientThink {
+    .CommentCardItem {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+    }
+  }
 }
 @media (max-width: 768px) {
   .homeContainer {
@@ -133,6 +200,17 @@
   }
   .ShishaTasts {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .ClientThink {
+    .title {
+      span {
+        text-align: center;
+      }
+    }
+    .CommentCardItem {
+      grid-template-columns: repeat(1, 1fr);
+      gap: 10px;
+    }
   }
 }
 @media (max-width: 576px) {
