--- a/src/style/page/home.scss
+++ b/src/style/page/home.scss
@@ -9,7 +9,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  min-height: 100vh;
+  min-height: 115vh;
   display: flex;
   align-items: flex-end;
   justify-content: start;
@@ -19,8 +19,8 @@
     justify-content: space-between;
     gap: 1.1rem;
     max-width: 36%;
-    margin-left: 11rem;
-    padding-bottom: 10px;
+    margin-left: 14rem;
+    padding-bottom: 90px;
     h4 {
       text-align: left;
       color: #30fdff;
@@ -144,6 +144,42 @@
     margin-top: 20px;
   }
 }
+.ProductContainer {
+  padding: 45px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  .product-item {
+    width: 100%;
+    max-height: 350px;
+    overflow: hidden;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 5%;
+      left: 5%;
+      height: 100%;
+      width: 100%;
+      background-color: transparent;
+      z-index: 1;
+      transition: 0.6s;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
+    }
+    &:hover {
+      img {
+        scale: 1.2;
+      }
+      &::before {
+        background-color: #30fdff66;
+      }
+    }
+  }
+}
 @media (max-width: 1200px) {
   .homeContainer {
     justify-content: center;
@@ -193,6 +229,9 @@
       gap: 10px;
     }
   }
+  .ProductContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media (max-width: 768px) {
   .homeContainer {
@@ -218,6 +257,8 @@
     .homeText {
       max-width: 90%;
       margin: 0 auto;
+      padding-bottom: 0;
+
       h4 {
         font-size: 37px;
       }
@@ -231,6 +272,10 @@
   }
   .ShishaTasts {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .ProductContainer {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
   }
 }
 @media (max-width: 450px) {
