about card component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,3 +4,4 @@
 @import url(../style/component/button.scss);
 @import url(../style/component/shishaTasts.scss);
 @import url(../style/component/customerCommentCard.scss);
+@import url(../style/component/aboutCard.scss);
