--- a/src/style/page/home.scss
+++ b/src/style/page/home.scss
@@ -77,7 +77,6 @@
     }
   }
 }
-
 .ShishaTasts {
   padding: 3rem 0;
   display: grid;
@@ -204,6 +203,24 @@
   }
 }
 @media (max-width: 991px) {
+  .aboutCardContainer {
+    flex-direction: column;
+    .content {
+      align-items: center;
+      justify-content: center;
+      h3 {
+        text-align: center;
+        font-size: 42px;
+      }
+      span {
+        text-align: center;
+        font-size: 42px;
+      }
+      p {
+        text-align: center;
+      }
+    }
+  }
   .homeContainer {
     .homeText {
       max-width: 65%;
@@ -311,3 +328,4 @@
     }
   }
 }
+ 
