--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,3 +5,4 @@
 @import url(../style/component/shishaTasts.scss);
 @import url(../style/component/customerCommentCard.scss);
 @import url(../style/component/aboutCard.scss);
+@import url(../style/component/footer.scss);
