--- a/src/style/page/home.scss
+++ b/src/style/page/home.scss
@@ -13,6 +13,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: start;
+  border-bottom: 0.5px solid #272727;
   .homeText {
     display: flex;
     flex-direction: column;
@@ -328,4 +329,3 @@
     }
   }
 }
- 
