--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,3 +6,4 @@
 @import url(../style/component/customerCommentCard.scss);
 @import url(../style/component/aboutCard.scss);
 @import url(../style/component/footer.scss);
+@import url(../style/component/reserve.scss);
