--- a/src/style/page/home.scss
+++ b/src/style/page/home.scss
@@ -112,6 +112,9 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
+.Reservecontainer{
+  margin: 100px 0;
+}
 .ClientThink {
   display: flex;
   flex-direction: column;
