--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,7 @@
 @import url(../style/component/header.scss);
 @import url(../style/base/base.scss);
 @import url(../style/page/home.scss);
+@import url(../style/page/about.scss);
 @import url(../style/component/button.scss);
 @import url(../style/component/shishaTasts.scss);
 @import url(../style/component/customerCommentCard.scss);
