--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,3 +8,4 @@
 @import url(../style/component/aboutCard.scss);
 @import url(../style/component/footer.scss);
 @import url(../style/component/reserve.scss);
+@import url(../style/component/locationInfo.scss);
