--- a/src/style/page/home.scss
+++ b/src/style/page/home.scss
@@ -112,7 +112,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
-.Reservecontainer{
+.Reservecontainer {
   margin: 100px 0;
 }
 .ClientThink {
@@ -212,6 +212,9 @@
     }
   }
 }
+// .LocationContainer {
+ 
+// }
 @media (max-width: 1200px) {
   .homeContainer {
     justify-content: center;
