--- a/src/style/component/locationInfo.scss
+++ b/src/style/component/locationInfo.scss
@@ -54,7 +54,7 @@
     margin-top: 6rem;
     .map {
       width: 50%;
-      height: 425px;
+      height: auto;
       position: relative;
       iframe {
         width: 100%;
