--- a/src/style/component/header.scss
+++ b/src/style/component/header.scss
@@ -15,6 +15,7 @@ header {
     color: #fff;
     text-transform: uppercase;
     letter-spacing: 1px;
+    font-family: "Montserrat Alternates", sans-serif;
   }
   nav {
     display: flex;
