--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,5 @@
-@import url(../style/component/header.scss);
 @import url(../style/base/base.scss);
+@import url(../style/component/header.scss);
 @import url(../style/page/home.scss);
 @import url(../style/page/about.scss);
 @import url(../style/component/button.scss);
@@ -9,3 +9,4 @@
 @import url(../style/component/footer.scss);
 @import url(../style/component/reserve.scss);
 @import url(../style/component/locationInfo.scss);
+@import url(../style/component/menu.scss);
