--- a/src/style/page/home.scss
+++ b/src/style/page/home.scss
@@ -224,6 +224,7 @@
       margin: 0 auto;
       align-items: center;
       justify-content: center;
+      padding-bottom: 10px;
       h4 {
         text-align: center;
       }
