--- a/src/style/component/locationInfo.scss
+++ b/src/style/component/locationInfo.scss
@@ -53,14 +53,13 @@
     gap: 55px;
     margin-top: 6rem;
     .map {
-      width: 50%;
-      height: auto;
       position: relative;
+      flex: 1;
       iframe {
-        width: 100%;
-        height: 100%;
         object-fit: cover;
         opacity: 0.9;
+        height: 426px;
+        width: 100%;
         border: none;
         outline: none;
         cursor: url(https://maps.gstatic.com/mapfiles/openhand_8_8.cur), default;
@@ -73,7 +72,7 @@
       align-items: start;
       gap: 35px;
       padding: 30px;
-      width: 50%;
+      flex: 1;
       .title {
         color: #ffffff;
         font-family: "Montserrat Alternates", Sans-serif;
@@ -90,12 +89,12 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        overflow: hidden;
         li {
           display: flex;
           align-items: center;
           justify-content: space-between;
           gap: 30px;
-
           span {
             font-family: "Work Sans", Sans-serif;
             font-size: 18px;
@@ -130,15 +129,17 @@
       .map {
         width: 100%;
         order: 2;
-
+        iframe {
+          height: 350px;
+        }
       }
       .OpeningHours {
         width: 100%;
         padding: 20px;
         order: 1;
         .title {
-          font-size: 35px;
-          padding-bottom: 10px;
+          font-size: 30px;
+          padding-bottom: 15px;
         }
         ul {
           li {
